<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Recents"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/recents" />
        <item
            android:id="@+id/nav_All_notification"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/all_notifications" />
        <item
            android:id="@+id/nav_notfication_by_Apps"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/notification_by_apps" />
        <item
            android:id="@+id/nav_Export_Logs"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/export" />
        <item
            android:id="@+id/nav_Favourites"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_How"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/how_to_use" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
