<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav">
    <fragment
        android:id="@+id/nav"
        android:name="org.hcilab.projects.nlogx.ui.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >

    <action
        android:id="@+id/navigate_to_nav_home"
        app:destination="@id/nav_home" />
     <activity
    android:id="@+id/nav_home"
    android:name="org.hcilab.projects.nlogx.ui.BrowseActivity"
    android:label="Product Details"
    tools:layout="@layout/fragment_home">

    <argument
        android:name="product_id"
        app:argType="integer" />

</activity>
    </fragment>
    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.hcilab.projects.nlogx.ui.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="org.hcilab.projects.nlogx.ui.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="org.hcilab.projects.nlogx.ui.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="org.hcilab.projects.nlogx.ui.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="org.hcilab.projects.nlogx.ui.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>